syntax = "proto3";

option csharp_namespace = "Discount.Grpc";

package discount;


// Service definition for Discount management
service DiscountProtoService {
  // Get discount information by product name
  rpc GetDiscount(GetDiscountRequest) returns (CouponModel) {}
  
  // Create a new discount
  rpc CreateDiscount(CouponModel) returns (CouponModel) {}
  
  // Update existing discount
  rpc UpdateDiscount(CouponModel) returns (CouponModel) {}
  
  // Delete discount
  rpc DeleteDiscount(DeleteDiscountRequest) returns (DeleteDiscountResponse) {}
}

// Coupon model that matches the C# class
message CouponModel {
  int32 id = 1;
  string productName = 2;
  string description = 3;
  int32 amount = 4;
}

message GetDiscountRequest {
  string productName = 1;
}

message GreateCouponRequest{
	CouponModel coupon = 1;
}

message UpdateCouponRequest{
	CouponModel coupon = 1;
}

message DeleteDiscountRequest {
  string productName = 1;
}

message DeleteDiscountResponse {
  bool success = 1;
}